Обновлен шаблон show.html.twig для динамического отображения мета-тегов SEO, включая мета-описание категории. Добавлен блок meta в базовый шаблон для улучшения управления мета-данными.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Symfony + Vue{% endblock %}</title>
+    {% block meta %}{% endblock %}
     <meta name="csrf-token" content="{{ csrf_token('api') }}">
     {# app entry removed #}
     {% block styles %}{% endblock %}
