--- a/templates/catalog/category/_grid.html.twig
+++ b/templates/catalog/category/_grid.html.twig
@@ -27,18 +27,24 @@
         {% endif %}
 
         <div class="group relative px-2 pt-2 category-shadow rounded-t-md">
-          {% set firstImage = p.image|sort((a,b) => a.sortOrder <=> b.sortOrder)|first %}
-          {% if firstImage %}
-            {% set raw = firstImage.imageUrl %}
-            {% if raw starts with '/media/cache/' %}
-              {% set imgSrc = raw %}
+          {% if p.image|length > 0 %}
+            {% set firstImage = p.image|sort((a,b) => a.sortOrder <=> b.sortOrder)|first %}
+            {% if firstImage %}
+              {% set raw = firstImage.imageUrl %}
+              {% if raw starts with '/media/cache/' %}
+                {% set imgSrc = raw %}
+              {% else %}
+                {% set rel = raw|replace({'/img/':''})|trim('/') %}
+                {% set imgSrc = asset('/img/' ~ rel) | imagine_filter('md2') %}
+              {% endif %}
+              <a href="{{ path('catalog_product_show', { slug: p.slug }) }}">
+                <img src="{{ imgSrc }}" alt="{{ p.name }}" class="aspect-square rounded-t w-full rounded-md bg-gray-200 object-cover lg:aspect-auto">
+              </a>
             {% else %}
-              {% set rel = raw|replace({'/img/':''})|trim('/') %}
-              {% set imgSrc = asset('/img/' ~ rel) | imagine_filter('md2') %}
+              <a href="{{ path('catalog_product_show', { slug: p.slug }) }}">
+                <img src="https://via.placeholder.com/500" alt="{{ p.name }}" class="aspect-square rounded-t w-full rounded-md bg-gray-200 object-cover lg:aspect-auto">
+              </a>
             {% endif %}
-            <a href="{{ path('catalog_product_show', { slug: p.slug }) }}">
-              <img src="{{ imgSrc }}" alt="{{ p.name }}" class="aspect-square rounded-t w-full rounded-md bg-gray-200 object-cover lg:aspect-auto">
-            </a>
           {% else %}
             <a href="{{ path('catalog_product_show', { slug: p.slug }) }}">
               <img src="https://via.placeholder.com/500" alt="{{ p.name }}" class="aspect-square rounded-t w-full rounded-md bg-gray-200 object-cover lg:aspect-auto">
