Обновлен шаблон _grid.html.twig: добавлен функционал для динамической подгрузки изображений при наведении на элемент, улучшая взаимодействие с галереей товаров.

--- a/templates/catalog/category/_grid.html.twig
+++ b/templates/catalog/category/_grid.html.twig
@@ -26,10 +26,24 @@
           {% endif %}
         {% endif %}
 
-        <div class="group relative px-2 pt-2 category-shadow rounded-t-md">
+        {# Собираем упорядоченный список изображений и их URL #}
+        {% set sortedImages = p.image|sort((a,b) => a.sortOrder <=> b.sortOrder) %}
+        {% set imageUrls = [] %}
+        {% for image in sortedImages %}
+          {% set raw = image.imageUrl %}
+          {% if raw starts with '/media/cache/' %}
+            {% set imgUrl = raw %}
+          {% else %}
+            {% set rel = raw|replace({'/img/':''})|trim('/') %}
+            {% set imgUrl = asset('/img/' ~ rel) | imagine_filter('md2') %}
+          {% endif %}
+          {% set imageUrls = imageUrls|merge([imgUrl]) %}
+        {% endfor %}
+
+        <div class="group relative px-2 pt-2 category-shadow rounded-t-md" data-controller="product-gallery" data-product-gallery-images-value="{{ imageUrls|json_encode|e('html_attr') }}">
           <div class="relative">
             {% if p.image|length > 0 %}
-              {% set firstImage = p.image|sort((a,b) => a.sortOrder <=> b.sortOrder)|first %}
+              {% set firstImage = sortedImages|first %}
               {% set imagesCount = p.image|length %}
               {% if firstImage %}
                 {% set raw = firstImage.imageUrl %}
@@ -40,12 +54,12 @@
                   {% set imgSrc = asset('/img/' ~ rel) | imagine_filter('md2') %}
                 {% endif %}
                 <a href="{{ path('catalog_product_show', { slug: p.slug }) }}">
-                  <img src="{{ imgSrc }}" alt="{{ p.name }}" class="aspect-square rounded-t w-full rounded-md bg-gray-200 object-cover lg:aspect-auto">
+                  <img src="{{ imgSrc }}" alt="{{ p.name }}" class="aspect-square rounded-t w-full rounded-md bg-gray-200 object-cover lg:aspect-auto" data-product-gallery-target="image">
                 </a>
                 {% if imagesCount > 1 %}
                   <div class="absolute bottom-0 left-0 right-0 flex h-full mb-1">
                     {% for i in 1..imagesCount %}
-                      <div class="flex-1 border-b-2 border-yellow-500 mx-1"></div>
+                      <div class="flex-1 border-b-2 {{ loop.first ? 'border-yellow-500' : 'border-gray-300' }} hover:border-yellow-500 mx-1" data-action="mouseenter->product-gallery#showImage" data-product-gallery-image-index-value="{{ loop.index0 }}" data-product-gallery-target="indicator"></div>
                     {% endfor %}
                   </div>
                 {% endif %}
