--- a/templates/catalog/search/index.html.twig
+++ b/templates/catalog/search/index.html.twig
@@ -49,7 +49,7 @@
             </select>
           </div>
           <div class="relative mb-4" data-facets-target="products" data-action="click->facets#onPaginationClick">
-            <div id="category-grid-spinner" class="absolute inset-0 flex items-center justify-center z-10" data-size="small" data-color="secondary" data-overlay="true"></div>
+            <div id="category-grid-spinner" class="absolute inset-0 flex items-center justify-center z-10 hidden" data-size="small" data-color="secondary" data-overlay="true" style="display: none;"></div>
             {% include 'catalog/category/_grid.html.twig' with { products: products, total: total, page: page|default(1), limit: limit|default(20), routeName: 'catalog_search_products', routeParams: {} } %}
           </div>
         </main>
