--- a/templates/catalog/category/show.html.twig
+++ b/templates/catalog/category/show.html.twig
@@ -39,7 +39,7 @@
         </aside>
         <div class="md:col-span-3">
           <div class="mt-4 pb-6 border-b border-gray-200 hidden" data-facets-target="selected" aria-live="polite"></div>
-          <div class="pb-6 pt-6 flex justify-normal items-center gap-2 border-b border-gray-200">
+          <div class="pb-2 pt-6 flex justify-normal items-center gap-2 border-gray-200">
           
             <label for="limit-select" class="text-sm text-gray-600 align-left">Показывать по:</label>
             <select id="limit-select" class="select max-w-40 appearance-none align-left" aria-label="select" data-facets-target="limit" data-action="change->facets#onLimitChange">
