--- a/templates/catalog/category/_grid.html.twig
+++ b/templates/catalog/category/_grid.html.twig
@@ -40,7 +40,7 @@
           {% set imageUrls = imageUrls|merge([imgUrl]) %}
         {% endfor %}
 
-        <div class="group relative px-2 pt-4 pb-4 category-shadow border-b border-t border-gray-200" data-controller="product-gallery" data-product-gallery-images-value="{{ imageUrls|json_encode|e('html_attr') }}">
+        <div class="group relative px-2 pt-4 pb-3 category-shadow border-b border-t border-gray-200" data-controller="product-gallery" data-product-gallery-images-value="{{ imageUrls|json_encode|e('html_attr') }}">
           <div class="relative">
             {% if p.image|length > 0 %}
               {% set firstImage = sortedImages|first %}
@@ -96,17 +96,19 @@
                   data-module="wishlist-toggle"
                   data-spinner="false"
                   data-product-id="{{ p.id }}"
-                  class="absolute right-3 top-3 z-10 rounded-full bg-white/80 p-2 text-gray-600 shadow-sm hover:text-red-500"
+                  class="absolute right-3 top-4 z-10 rounded-full p-2 text-gray-600 shadow-sm hover:text-red-500 {% if inWishlist %}is-active text-red-500{% endif %}"
                   {% if inWishlist %}data-state="active"{% endif %}>
-            <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z"/>
+            
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="currentColor" class="h-5 w-5">
+              <path d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z" />
             </svg>
+
           </button>
 
           <div class="mt-2 flex justify-between leading-4">
-            <div>
+            <div class="min-w-0 flex-1">
               <div class="text-base leading-4 text-blue-600">
-                <a href="{{ path('catalog_product_show', { slug: p.slug }) }}">                  
+                <a class="block truncate" href="{{ path('catalog_product_show', { slug: p.slug }) }}" title="{{ p.name }}">                  
                   {{ p.name }}
                 </a>
               </div>
